--- a/package.json
+++ b/package.json
@@ -4,19 +4,9 @@
   "description": "node on heroku",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Craiig98/MyLab3.git"
-  },
-  "keywords": [
-    "lab"
-  ],
   "author": "Craig",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Craiig98/MyLab3/issues"
-  },
-  "homepage": "https://github.com/Craiig98/MyLab3#readme"
+  "license": "ISC"
 }
