--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "start": "node index.js"
   },
   "author": "Craig",
+  "dependencies": {
+    "express": "~4.13.4"
+  },
   "license": "ISC"
 }
